# Blockchain-based-Federated-Learning-against-Latent-Attack-Benchmark

./: .gitignore  PRD.md  README.md  analyze_quality.py  chart-2-design.md  config.yaml  config_verify.yaml  debug_config.yaml  debug_oscillation.py  fast_stake_engine.py  main.py  migrate_results.py  optimal_config.yaml  progressive_stack_capture_attack.md  pyproject.toml  quick_stake_sim.py  run_sim.py  run_verification.py  search_params.py  seed_search_results.json  seed_search_results.json.bak  simulation_output.txt  simulation_output_aggressive.txt  simulation_output_constrained.txt  simulation_output_final.txt  simulation_output_optimized.txt  simulation_output_small_pool.txt  simulation_output_super.txt  simulator.py  stake_sim.py  test_verification.py  verify_engine.py  verify_label_distribution.py  visualize.py
data/: loader.py
models/: cifar10_net.py  mnist_net.py
results/: cifar10_results.json  mnist_noniid_results.json  mnist_noniid_results.json.bak  mnist_results.json  mnist_results.json.bak  mnist_results_p05.json.bak  mnist_results_stack_capture.json.bak
